# Qplacer

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  requirements.txt
qplacer/: benchmark_generation.py  benchmark_params.json  collision_check.py  compile.sh  connectivity.py  design_format.py  example.ipynb  frequency_assignment.py  qplacement_database.py  qplacement_param.py  qplacer_example.ipynb  run.sh  utils.py
qplacer/qplacer_bm/: benchmark_generation.py  benchmark_params.json  benchmark_params_classical.json  collision_check.py  connectivity.py  design_format.py  frequency_assignment.py  qplacement_database.py  qplacement_param.py  utils.py
qplacer/qplacer_bm/bm_io/: def_file_writer.py  json_file_writer.py  lef_file_writer.py
qplacer/qplacer_engine/: BasicPlace.py  EvalMetrics.py  NesterovAcceleratedGradientOptimizer.py  NonLinearPlace.py  Params.py  PlaceDB.py  PlaceObj.py  Placer.py  params.json
qplacer/qplacer_engine/ops/: CMakeLists.txt  configure.py
qplacer/qplacer_engine/ops/archive/abacus_legalize/: CMakeLists.txt  abacus_legalize.py
qplacer/qplacer_engine/ops/archive/macro_legalize/: macro_legalize.py
qplacer/qplacer_engine/ops/archive/macro_legalize/src/: hannan_legalize.h  lp_legalize.h  macro_legalize.cpp
qplacer/qplacer_engine/ops/draw_place/: CMakeLists.txt  PlaceDrawer.py  draw_place.py
qplacer/qplacer_engine/ops/frequency_repulsion/: CMakeLists.txt  frequency_repulsion.py
qplacer/qplacer_engine/ops/frequency_repulsion/src/: frequency_repulsion.cpp
qplacer/qplacer_engine/ops/greedy_legalize/: CMakeLists.txt  greedy_legalize.py
qplacer/qplacer_engine/ops/greedy_legalize/src/: blank.h  function_cpu.h  greedy_legalize.cpp  greedy_legalize_cpu.cpp  legalize_bin_cpu.cpp  legalize_bin_cpu_backup.cpp
qplacer/qplacer_engine/ops/greedy_legalize/src_backup/: blank.h  greedy_legalize.cpp  greedy_legalize_cpu.cpp  legalize_bin_cpu.cpp
qplacer/qplacer_engine/ops/lcoupler_legalize/: CMakeLists.txt  lcoupler_legalize.py
qplacer/qplacer_engine/ops/lcoupler_legalize/src/: bin_assignment_cpu.h  blank.h  compare_cpu.h  function_cpu.h  greedy_legalize.cpp  greedy_legalize_cpu.cpp  legalize_bin_cpu.cpp  legalize_bin_cpu_backup.cpp  merge_bin_cpu.cpp  merge_bin_cpu.h  status_summary_cpu.h
qplacer/qplacer_engine/ops/legality_check/: CMakeLists.txt  legality_check.py
qplacer/qplacer_engine/ops/legality_check/src/: legality_check.cpp  legality_check.h
qplacer/qplacer_engine/ops/macro_legalize/: CMakeLists.txt  macro_legalize.py
qplacer/qplacer_engine/ops/macro_legalize/src/: lp_legalize.h  macro_legalize.cpp
qplacer/qplacer_engine/ops/qubit_legalize/: CMakeLists.txt  qubit_legalize.py
qplacer/qplacer_engine/ops/qubit_legalize/src/: Util.h  diamond_search.h  hannan_legalize.h  lp_legalize.h  qubit_legalize.cpp
qplacer/qplacer_engine/ops/utility/: CMakeLists.txt
qplacer/qplacer_engine/ops/utility/src/: box.h  defs.h  legalization_db.h  limits.h  make_placedb.h  math.h  msg.cpp  msg.h  namespace.h  timer.h  torch.h  utils.h
qplacer/qplacer_io/: json_file_writer.py
